--- a/demonstration/index.html
+++ b/demonstration/index.html
@@ -280,10 +280,11 @@
       
   
 </body>
+   
 
-  <script src="../assets/js/doc.js"></script>
+<!-- ------------------ sistema de path para los scripts ------------------- -->
+  <script src="../assets/js/doc.js"></script>     
   <script src="../assets/js/bulma-carousel.min.js"></script>
-  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>                      
 </body>
-
 </html>
